# axiom-protocol

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: vt-post-write.sh  vt-validate.sh
.cursor/rules/: detected-concurrency.mdc  detected-data-serialization.mdc  detected-encryption.mdc  detected-http-server-stdlib.mdc  detected-input-validation.mdc  detected-llm-provider-integration.mdc  detected-ml-embeddings.mdc  detected-monkey-patching--aop.mdc  detected-package-management.mdc  detected-relational-database.mdc  detected-rest-api.mdc  detected-secrets-management.mdc  detected-similarity-detection.mdc  detected-unit-testing.mdc
.smm/contradictions/: contradiction-24b16eed.json  contradiction-51130928.json  contradiction-e6f3b4ed.json
.smm/decisions/: 001-database-relational.json  002-database-orm.json  003-api-rest.json  004-api-serialization.json  005-security-encryption.json  006-security-secrets.json  007-quality-unit_testing.json  008-quality-validation.json  009-arch-concurrency.json  010-arch-package_mgmt.json  011-integration-llm.json  012-database-sqlite.json  013-api-http_server.json  014-arch-threading.json  015-arch-monkey_patching.json  016-data-similarity.json  017-data-ml_embeddings.json
.smm/traces/: events.jsonl
docker/: Dockerfile  docker-compose.override.yml  docker-compose.yml
reference/: AGENT_ONBOARDING_SPEC.md  AI Code Assumption Governance Research.docx  Building a Principled Assumption Detection Framework.docx  Dashboard Design for VC Demo.docx  README_axiom_hub.md  SPEC.md  VT Protocol Dashboard Redesign Spec.docx  VT Protocol QA Test Suite Generation.docx  roadmap.md  technical-roadmap.md
src/vt_protocol/: __init__.py  config.py  events.py  exceptions.py
tests/: conftest.py  test_automated_flow.py  test_bug1_refactor_tasks.py  test_bug2_stale_dashboard.py  test_bug4_auto_apply.py  test_bug5_session_tokens.py  test_bug6_axiom_badge.py  test_config.py  test_config_agents.py  test_contradiction_lock.py  test_duplicate_contradictions.py  test_events.py  test_fix1_trace_events.py  test_fix2_import_validation.py  test_fix3_hook_matcher.py  test_fix4_session_logs.py  test_fix5_post_commit_and_post_tool_use.py  test_fix6_systemic_bugs.py
tests/adversarial/: test_oversized_payloads.py  (+3 more)
(+242 files in other folders)
