[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "vt-protocol"
version = "0.1.0"
description = "AI agent governance — decision graph, contradiction detection, causal observation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Varun Ajay Tawde" }]
keywords = ["ai", "governance", "mcp", "agents", "decisions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.7,<3",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "click>=8.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "fastmcp>=0.4",
    "wrapt>=1.16",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "pynacl>=1.5",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0",
    "datasketch>=1.6",
]
analyzers = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
]
ml = [
    "scikit-learn>=1.4.0",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
vt = "vt_protocol.cli.commands:main"

[project.urls]
Homepage = "https://github.com/varunajaytawde/vt-protocol"
Issues = "https://github.com/varunajaytawde/vt-protocol/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: integration tests (may require external services)",
    "adversarial: adversarial tests (edge cases, injection, breakage)",
    "performance: performance benchmarks (may be slow)",
    "chaos: chaos engineering tests (failure injection, corruption)",
    "compliance: compliance and audit verification tests",
    "slow: tests that take more than 5 seconds",
]

[tool.mypy]
python_version = "3.11"
strict = true
